fix scrollbar

--- a/chatbox/package/styles.css
+++ b/chatbox/package/styles.css
@@ -22,12 +22,12 @@
 }
 
 .chatbox-chat {
-  padding: 1rem;
-  gap: 5px;
   display: flex;
   flex-direction: column;
-  height: 300px;
-  overflow: scroll;
+  gap: 5px;
+  padding: 1rem;
+  height: 100%;
+  overflow-y: scroll;
 }
 
 .chatbox-chat-message {
@@ -118,11 +118,14 @@
 }
 
 .chatbox-widget-modal {
+  display: grid;
+  grid-template-rows: auto 1fr auto;
   overflow: hidden;
   z-index: 2;
   position: absolute;
   bottom: calc(100% + 60px + 20px);
   right: 0;
+  height: 460px;
   width: 320px;
   max-width: 100%;
   background-color: #fff;
@@ -150,14 +153,12 @@
 }
 
 .chatbox-admin-grid {
-  background-color: #fff;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  height: 100vh;
   margin: 0 auto;
   width: 400px;
-  font-size: 15px;
-  line-height: 1.4;
-  display: grid;
-  height: 100vh;
-  grid-template-rows: auto 1fr auto;
+  background-color: #fff;
 }
 
 .chatbox-admin-header {
